# OMatG

./: README.md  pyproject.toml
omg/: __init__.py  globals.py  main.py  omg_cli.py  omg_lightning.py  omg_trainer.py  utils.py
omg/analysis/: __init__.py  analysis.py  valid_atoms.py
omg/conf_examples/: csp_linear_ode_mp_20.yaml  dng_linear_sde_mp_20.yaml
omg/data/carbon_24_new/duplicate_datasets/: carbon_NXL_indices.txt  carbon_X_indices.txt  train_NXL.lmdb-lock  train_X.lmdb-lock  val_NXL.lmdb-lock  val_X.lmdb  val_X.lmdb-lock
omg/data/carbon_24_new_Nsplit/carbon_Nsplit_htl/: test.csv  test.lmdb-lock  test_indices.txt  train.csv  train.lmdb-lock  train_indices.txt  val.csv  val.lmdb-lock  val_indices.txt
omg/data/carbon_24_new_Nsplit/carbon_Nsplit_lth/: test.csv  test.lmdb-lock  test_indices.txt  train.csv  train.lmdb-lock  train_indices.txt  val.csv  val.lmdb-lock  val_indices.txt
omg/data/carbon_24_unique/: test.lmdb  val.lmdb
omg/data/carbon_24_unique/overfitting_datasets/: README.md
omg/datamodule/: __init__.py  dataloader.py  datamodule.py  omg_data.py  omg_datamodule.py  omg_dataset.py  structure.py  structure_dataset.py
omg/sampler/: __init__.py  abstracts.py  cell_distributions.py  independent_sampler.py  minimum_permutation_distance.py  position_distributions.py  sample_from_rng.py  sampler.py  species_distributions.py
omg/si/: __init__.py  abstracts.py  discrete_flow_matching_uniform.py  gamma.py  interpolants.py  sigma.py  single_stochastic_interpolant.py  single_stochastic_interpolant_os.py  tau.py
omg/tests/: test_analysis.py
(+6 files in other folders)
