[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "omg"
readme = "README.md"
requires-python = ">=3.10,<3.14"
version = "1.1.0"
dependencies = [
    "numpy ~= 2.3",
    "scipy ~= 1.16",
    "torch ~= 2.8",
    "lightning[extra] ~= 2.5",
    "torch_geometric ~= 2.7",
    "torch_scatter ~= 2.1",
    "torchdiffeq ~= 0.2",
    "torchsde ~= 0.2",
    "lmdb ~= 1.6",
    "loguru ~= 0.7",
    "ase ~= 3.25",
    "pytest ~= 8.4",
    "tqdm ~= 4.67",
    "smact ~= 3.1",
    "wandb ~= 0.20",
    "scikit-learn ~= 1.7",
    "matplotlib ~= 3.10",
    "pymatgen ~= 2025.6",
    "spglib ~= 2.6",
    "pyyaml ~= 6.0",
    "matminer ~= 0.9"
]

[project.scripts]
omg = "omg.main:main"

[tool.setuptools.packages.find]
where = ["."]
